--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+* {
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+}
+
 .App {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #d8d8d8;
   text-align: center;
+  width: 100%;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  padding: 12px;
+  border: #909090 1px solid;
+  background-color: #d8d8d8;
+  border-radius: 4px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
+  margin: 12px 0;
+  min-width: 120px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:hover {
+  background-color: rgb(180, 180, 180);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h2 {
+  margin: 24px 0;
+}
+
+.TextPage {
+  width: 100%;
+  background-color: #d8d8d8;
+}
+
+.header {
+  width: 100%;
+  position: fixed;
+}
+
+.list {
+  padding: 24px 0;
+  margin: 0 24px 0 0;
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+}
+
+.list-item {
+  padding: 16px 24px;
+  margin-left: 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 18px;
+  background-color: #D17046;
+  color: white;
+}
+
+.main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(190deg, #b6b6b6, transparent 50%);
+}
+
+.main h1 {
+  font-size: 48px;
+  margin: 0;
+}
+
+.main h2 {
+  margin: 0;
+}
+
+.main div {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  height: 100vh;
+}
+
+.main svg {
+  width: 30%;
+  height: auto;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #D17046;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.footer div {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer div div {
+  flex-direction: column;
+  margin-left: 10%;
+}
+
+.footer p, .footer h1 {
+  margin: 12px 0;
 }
